assets/stylesheets/style.scss
// © 2022 REVATI

@use './variables/color' as *;
@use './variables/dimension' as *;
@use './variables/mixin' as *;

main::before {
	content: '';
	$dark: rgba($secondary-color, 0.75);
	background: linear-gradient($dark, $dark),
		linear-gradient(
			165deg,
			#4e8091 13%,
			#154c84 22%,
			#0f5372 44%,
			#326e86 50%,
			#132f6b 62%,
			#132f6b 73%,
			#050946 90%
		);
	background-size: 100% 100vh;
	display: block;
	position: fixed;
	top: 0;
	left: 0;
	width: 100%;
	height: 100vh;
	z-index: -1;
}

.container {
	width: 100%;
}

.container::before {
	content: '';
	display: block;
	padding-top: 64px;
}

.container::after {
	content: '';
	display: block;
	padding-top: 86px;
}

section {
	max-width: 768px;
	margin: 0 auto;
	display: block;
	padding-left: 16px;
	padding-right: 16px;

	.section-content {
		margin: 16px 0;

		p {
			max-width: 576px;
			font-size: 22px;
			margin: 0 auto;
			font-weight: 1;
			letter-spacing: 0.075em;
			line-height: 1.5;

			@include sp {
				font-size: 18px;
			}
		}
	}
}

